# QmlObjParser

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  main.qml  qtquickcontrols2.conf
i18n/: RGZ_ru.ts
include/: glscene.h
objparser/: CMakeLists.txt  main.cpp
objparser/include/: ImageLoader.h  ImageToMesh.h  Mesh.h  MeshFactory.h  MeshNode.h  ObjParser.h  common.h  mesh.h  vec.h
objparser/src/: ImageLoader.cpp  ImageToMesh.cpp  Mesh.cpp  MeshNode.cpp  ObjParser.cpp  mesh.cpp  vec.cpp
objparser/test/: CMakeLists.txt  main.cpp  tst_parsetest.h
objparser/test/test_data/: cube.mtl  monkey.mtl
renderer/: CMakeLists.txt
renderer/include/: FloatingHorizon.h  MeshLoader.h  MeshNodeLoader.h  MeshNodeLoaders.h  SceneLoader.h  ShaderHolder.h  vecUtils.h
renderer/objparser/: .gitignore  CMakeLists.txt
renderer/objparser/include/: Mesh.h  MeshFactory.h  MeshNode.h
renderer/objparser/src/: MeshNode.cpp  ObjParser.cpp
renderer/objparser/test/: CMakeLists.txt  main.cpp
renderer/objparser/test/test_data/: cube.mtl
renderer/src/: FloatingHorizon.cpp  MeshLoader.cpp  MeshNodeLoader.cpp  MeshNodeLoaders.cpp  SceneLoader.cpp  ShaderHolder.cpp  vecUtils.cpp
sceneparser/: CMakeLists.txt
sceneparser/include/: SceneParser.h
sceneparser/src/: SceneParser.cpp
shaders/: VNT_fragment.glsl  VNT_vertex.glsl  VN_fragment.glsl  VN_vertex.glsl  VT_fragment.glsl  VT_vertex.glsl  V_fragment.glsl  V_vertex.glsl  fragment.glsl  hor_fragment.glsl  hor_vertex.glsl  vertex.glsl
src/: glscene.cpp
utils/: fileToString.py
